# cpp23-playground

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: Cpp23Playground.cmake
src/: CMakeLists.txt  main.cpp
src/compat/: CMakeLists.txt  compat.cppm
src/version/: CMakeLists.txt  version.cppm
tests/: CMakeLists.txt  add.cpp  addtest.cpp  version.cpp
